--- a/styles/float-page.css
+++ b/styles/float-page.css
@@ -10,3 +10,17 @@ main {
   margin-left: auto;
   margin-right: auto;
 }
+
+img {
+	width:36%;
+	margin:15px;
+}
+
+.image-left {
+	float:left;
+	margin-left:0;
+}
+.image-right {
+	float:right;
+	margin-right:0;
+}
